subnets.tf
resource "aws_subnet" "public-subnet" {
  vpc_id = "${aws_vpc.vpc.id}"
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-west-2a"

  tags {
    Name = "arjun-public-subnet"
  }
}

resource "aws_subnet" "private-subnet" {
  vpc_id = "${aws_vpc.vpc.id}"
  cidr_block = "10.0.2.0/24"
  availability_zone = "us-west-2a"

  tags {
    Name = "arjun-private-subnet"
  }
}
